--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -53,8 +53,8 @@
       </ul>
       <p>Similar examples include:</p>
       <ul>
-        <li><a href="alert.html">Alert</a>: a basic alert.</li>
-        <li><a href="../dialog-modal/dialog.html">Modal Dialog</a>: an example of multiple modal dialogs.</li>
+        <li><a href="../alert/alert.html">Alert</a>: a basic alert.</li>
+        <li><a href="dialog.html">Modal Dialog Example</a>: An example demonstrating multiple layers of modal dialogs with both small and large amounts of content.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
