Add link to review issue 736

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -35,6 +35,10 @@
       The below <q>Add Delivery Address</q> button opens a modal dialog that contains two buttons that open other dialogs.
       The accessibility features section explains the rationale for initial focus placement and use of <code>aria-describedby</code> in each dialog.
     </p>
+    <p>Similar examples include:</p>
+    <ul>
+      <li><a href="alertdialog.html">Alert Dialog Example</a>: A confirmation prompt that demonstrates an alert dialog.</li>
+    </ul>
     <section>
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
