Alert Example: Add link to alert dialog

--- a/examples/alert/alert.html
+++ b/examples/alert/alert.html
@@ -30,6 +30,10 @@
       The below example demonstrates the <a href="../../#alert">design pattern for alert</a>.
       Activating the <q>Trigger Alert</q> button causes a message to be inserted into the example alert element.
     </p>
+    <p>Similar examples include:</p>
+    <ul>
+      <li><a href="alertdialog.html">Alert Dialog Example</a>: A confirmation prompt that demonstrates an alert dialog.</li>
+    </ul>
     <section>
       <h2 id="ex_label">Example</h2>
       <p>
