Alert Dialog Pattern: Add link to example

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -324,9 +324,7 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p>
-        Developing an example implementation of this pattern is <a href="https://github.com/w3c/aria-practices/issues/101">issue 101</a>.
-        </p>
+        <p><a href="examples/dialog-modal/alertdialog.html">Alert Dialog Example</a>: A confirmation prompt that demonstrates an alert dialog.</p>
       </section>
 
       <section class="notoc">
