--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2576,11 +2576,13 @@
       </dl>
       <p>
         When using a keyboard to navigate a tree, a visual keyboard indicator informs the user which node is focused.
-        If the tree allows the user to choose just one item for an action, then it is known as a single-select tree, and the item with focus also has a selected state.
-        However, in multi-select trees, which enable the user to select more than one item for an action, the selected state is independent of the focus.
+        If the tree allows the user to choose just one item for an action, then it is known as a single-select tree.
+        In some implementations of single-select tree, the focused item also has a selected state; this is known as selection follows focus.
+        However, in multi-select trees, which enable the user to select more than one item for an action, the selected state is always independent of the focus.
         For example, in a typical file system navigator, the user can move focus to select any number of files for an action, such as copy or move.
         It is important that the visual design distinguish between items that are selected and the item that has focus.
-        For more details, see <a href="#kbd_focus_vs_selection">this description of differences between focus and selection.</a>
+        For more details, see <a href="#kbd_focus_vs_selection">this description of differences between focus and selection</a>
+        and <a href="#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
       </p>
 
       <section class="notoc">
