Structural Roles section: Add link to review issue

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4499,6 +4499,11 @@
   <section id="structural_roles">
     <h2>Structural Roles</h2>
     <p>
+      <strong>NOTE:</strong> This is a new section.
+      Please provide feedback in
+      <a href="https://github.com/w3c/aria-practices/issues/739">issue 739.</a>
+    </p>
+    <p>
       ARIA provides a set of roles that convey the accessibility semantics of structures on a page.
       These roles express the meaning that is conveyed by the layout and appearance of elements that organize and structure content, such as headings, lists, and tables.
     </p>
