add missing app.js

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -11,6 +11,7 @@
 <link href="../css/core.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
 <script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/dialog.css" rel="stylesheet">
