--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -7,6 +7,7 @@
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
 <link rel="stylesheet" href="../css/core.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <script src="../js/examples.js"></script>
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
@@ -45,31 +46,54 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar">
-            <div class="toolbar-item selected" role="button" tabindex="0">
-                Tool 1
+            <div class="toolbar-item selected" role="button" tabindex="0" value="bold">
+              <i class="fas fa-bold"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">Tool 2</div>
-            <div class="toolbar-item" role="button" tabindex="-1">Tool 3</div>
-            <div class="toolbar-item" role="button" tabindex="-1">Tool 4</div>
-            <div class="toolbar-item" role="button" tabindex="-1">Tool 5</div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-italic"></i>
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-align-left"></i>
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-align-center"></i>
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-align-right"></i>
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-plus"></i>
+            </div>
+            <div class="toolbar-item" role="button" tabindex="-1">
+              <i class="fas fa-minus"></i>
+            </div>
+
             <div class="menu-wrapper">
               <button
                 tabindex="-1"
                 aria-haspopup="true"
                 aria-controls="menu1"
                 class="toolbar-item menu-button">
-                Menu
+                <i class="fas fa-font"></i>
               </button>
               <ul role="menu" id="menu1">
-                <li role="menuitem">Item 1</li>
-                <li role="menuitem">Item 2</li>
-                <li role="menuitem">Item 3</li>
-                <li role="menuitem">Item 4</li>
-                <li role="menuitem">Item 5</li>
-                <li role="menuitem">Item 6</li>
+                <li role="menuitem">Sans-serif</li>
+                <li role="menuitem">Serif</li>
+                <li role="menuitem">Monospace</li>
+                <li role="menuitem">Fantasy</li>
               </ul>
             </div>
         </div>
+        <label for="textarea1" class="hidden">Text Sample</label><br>
+            <textarea id="textarea1" rows="20" cols="80"
+             style="font-size: medium; font-family: sans-serif"
+             >
+              Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.
+
+              Now we are engaged in a great civil war, testing whether that nation, or any nation, so conceived and so dedicated, can long endure. We are met on a great battle-field of that war. We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live. It is altogether fitting and proper that we should do this.
+
+              But, in a larger sense, we can not dedicate, we can not consecrate, we can not hallow, this ground. The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us, that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion, that we here highly resolve that these dead shall not have died in vain, that this nation, under God, shall have a new birth of freedom, and that government of the people, by the people, for the people, shall not perish from the earth.
+            </textarea>     
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
