--- a/examples/forms/popup-error-1.html
+++ b/examples/forms/popup-error-1.html
@@ -11,7 +11,7 @@
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
 
-<link href="css/popup-error-1.css" rel="stylesheet">
+<link href="css/popup-error.css" rel="stylesheet">
 <script src="js/popup-error-1.js" type="text/javascript"></script>
 </head>
 <body>
