update popup error 2 example

--- a/examples/forms/popup-error-2.html
+++ b/examples/forms/popup-error-2.html
@@ -11,7 +11,7 @@
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
 
-<link href="css/popup-error-1.css" rel="stylesheet">
+<link href="css/popup-error.css" rel="stylesheet">
 <script src="js/popup-error-2.js" type="text/javascript"></script>
 </head>
 <body>
@@ -47,21 +47,6 @@
                 onChange="setCardType()"
                 onblur="validateCardType()"
                 >
-            <option>
-              Choose Your Card Type
-            </option>
-            <option>
-              VISA
-            </option>
-            <option>
-              MasterCard
-            </option>
-            <option>
-              Discover
-            </option>
-            <option>
-              American Express
-            </option>
           </select>
           <span id="id-card-error" class="noerror" role="status">
           </span>
